# yukino

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.sqlx/: query-0d51d5fd2c49a2e56d28ad60c0a7c7f258d64a0517d3ca5c73a4fd65a1eab9d8.json  query-4640c279c565eb2793bfff01845ae69a10fc22a5b73a364a5bb72db393e56b86.json  query-a3c6ec26397b068f3680e282647b1103570feb903f1fc8830eb40ed61236e2be.json  query-faa017dcd5aaf91d1e8e7b2196ad9c70a32f167adbca864915b560980b2392ad.json
src/: auth.rs  error.rs  main.rs  state.rs  utils.rs
src/handlers/: auth.rs  device.rs  mod.rs  project.rs
src/models/: credential.rs  device.rs  mod.rs  project.rs  user.rs
src/routes/: auth.rs  device.rs  mod.rs  project.rs
src/services/: device.rs  project.rs  user.rs
src/utils/: error.rs  mod.rs  response.rs  telegram_hash.rs
yukino-backend/: .env.example  Cargo.toml
yukino-backend/src/: auth.rs  handlers.rs  main.rs  models.rs  routes.rs  utils.rs
yukino-backend/src/auth/: mod.rs
yukino-backend/src/handlers/: auth.rs  cdkey.rs  device.rs  project.rs  subscription.rs  user.rs
yukino-backend/src/models/: cdkey.rs  credential.rs  device.rs  project.rs  subscription.rs  user.rs
yukino-backend/src/routes/: auth.rs  cdkey.rs  device.rs  mod.rs  project.rs  projects.rs  subscription.rs  user.rs
yukino-backend/src/state/: mod.rs
yukino-backend/src/utils/: error.rs  response.rs  telegram_hash.rs
yukino-frontend/: index.html  package.json  vite.config.ts
yukino-frontend/src/: App.vue  main.ts  types.d.ts
yukino-frontend/src/api/: axios.ts
yukino-frontend/src/components/: GlobalSnackbar.vue  ThemeControls.vue
yukino-frontend/src/layouts/: AdminLayout.vue  UserLayout.vue
yukino-frontend/src/plugins/: vuetify.ts
yukino-frontend/src/router/: index.ts
yukino-frontend/src/stores/: auth.ts  feedback.ts
yukino-frontend/src/styles/: main.css
yukino-frontend/src/views/: AdminView.vue  (+3 more)
(+6 files in other folders)
