[package]
name = "yukino-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
strip = true
lto = true
panic = "abort"
