[package]
name = "yukino-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
chrono = "0.4.44"

[profile.release]
strip = true
lto = true
panic = "abort"
