[package]
name = "yukino-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
axum-login = "0.18.0"
thiserror = "2.0.18"
tracing-subscriber = "0.3.23"
chrono = "0.4.44"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
dotenvy = "0.15.7"
tracing = "0.1.44"

[profile.release]
strip = true
lto = true
panic = "abort"
